--- a/home.html
+++ b/home.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <body>
 
-<h1>My First Heading</h1>
+<head>
+<style>
+  body {
+		background-color:#E2E6E6
+		
+	}
+  h1   {
+		color:blue;
+		 border:1px solid black;
+		font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+	}
+  p    {
+		color:black
+	}
+	
+	
+	a a:link  {color:#000000; background-color:transparent}
+	a:visited {color:#000000; background-color:transparent}
+	a:hover   {color:#ff0000; background-color:transparent}
+	a:active  {color:#ff0000; background-color:transparent}
+	
+</style>
+</head>
 
-<p>My first paragraph.</p>
+<h1>Notify</h1>
+
+<hr>
+
+<p> 
+<i>This is a website that goes along with the mobile app "notify".</i>
+<br/>
+<a href="http://espn.go.com"><i>ESPN</i></a>
+</p>
+
 
 </body>
 </html>
